--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 
+		<wagon-ftp.version>3.2.0</wagon-ftp.version>
+
 		<plugin.versions.version>2.5</plugin.versions.version>
 	</properties>
 
@@ -66,6 +68,13 @@
 	</dependencies>
 
 	<build>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+				<version>${wagon-ftp.version}</version>
+			</extension>
+		</extensions>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -79,5 +88,14 @@
 		</plugins>
 	</build>
 
-
+	<distributionManagement>
+		<repository>
+			<id>ftp.forinilvi.nazwa.pl</id>
+			<url>ftp://ftp.forinilvi.nazwa.pl/m2/release</url>
+		</repository>
+		<snapshotRepository>
+			<id>ftp.forinilvi.nazwa.pl</id>
+			<url>ftp://ftp.forinilvi.nazwa.pl/m2/snapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
